--- a/particles/cftemplates/spotinst/elastigroup.template.json.hbs
+++ b/particles/cftemplates/spotinst/elastigroup.template.json.hbs
@@ -1,28 +1,10 @@
 {{#layout}}
-  {{parameter "m:core" "base" type="String" logicalId="RestUrl" description="Do NOT include trailing forward slash"}}
 
-  {{resource "m:lambda" "function/execution_role" logicalId="LambdaExecutionRole"}}
-
-  {{#resource "m:spotinst-lambda" "lambda"
-    logicalId="SpotinstLambda"
-    role=(partial "m:core" "fn_get_att"
-    logicalId="LambdaExecutionRole"
-    attributeName="Arn")
-  }}
-    "Properties": {
-      "Environment": {
-        "Variables": {
-          "spotinst_lambda_restUrl": {{ref "RestUrl"}}
-        }
-      }
-    }
-  {{/resource}}
-
-  {{set "m:lambda" "function/all_outputs" functionLogicalId="SpotinstLambda"}}
+  {{parameter "m:core" "base" type="String" logicalId="LambdaARN" description="ARN of spotinst-lambda"}}
 
   {{#resource "m:core" "base" logicalId="ElastiGroup" type="Custom::elastigroup"}}
     "Properties": {
-      "ServiceToken": {{partial "m:core" "fn_get_att" logicalId="SpotinstLambda" attributeName="Arn"}},
+      "ServiceToken": {{ref "LambdaARN"}},
       "accessToken": "fake",
       "group": {
         "compute": {
