dynamodb for counting and script for autorunning cf

--- a/particles/cftemplates/spotinst/elastigroup.template.json.hbs
+++ b/particles/cftemplates/spotinst/elastigroup.template.json.hbs
@@ -80,7 +80,7 @@
             ]
         },
         "scaling": {},
-        "name": "spotinst-group-ci-KPNKLATIVE",
+        "name": {{ref "AWS::StackName"}},
         "scheduling": {},
         "description": "Development",
         "strategy": {
